--- a/application.json
+++ b/application.json
@@ -9,6 +9,9 @@
   "appIsExample": false,
   "unreadCommentThreads": 0,
   "color": "#FFEFDB",
+  "unpublishedAppLayout": {
+    "type": "FLUID"
+  },
   "evaluationVersion": 2,
   "applicationVersion": 2,
   "isManualUpdate": false,
